[package]
name = "helm_repo_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
    "now",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.2"
