[package]
name = "helm_repo_updater"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
    "now",
] }
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.2"
